# texthold

./: LICENSE.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml
docs/: CNAME  index.html  v1.0.rst  v2.0.rst
src/texthold/: __init__.py
src/texthold/core/: TextHolder.py  __init__.py
src/texthold/tests/: __init__.py  test_0.py  test_1.py
tests/: test_0.py  test_1.py
