[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "datahold>=3.0,<4",
    "setdoc>=1.3,<2",
]
description = "This project provides a class that holds text."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "texthold"
readme = "README.rst"
requires-python = ">=3.11"
version = "2.0.8"

[project.urls]
Download = "https://pypi.org/project/texthold/#files"
Index = "https://pypi.org/project/texthold/"
Source = "https://github.com/johannes-programming/texthold/"
Website = "https://texthold.johannes-programming.online/"

[tool.mypy]
files = [
    ".",
]
python_version = "3.11"
strict = true
